v3/platform/kubernetes/base/observability/elastic-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: elasticsearch
  namespace: elastic-stack
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`elasticsearch.observability.test`)
      services:
        - name: elasticsearch-es-http
          port: 9200
          scheme: https
          serversTransport: eck-elasticsearch-https
  tls:
    secretName: elastic-public-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: elastic-stack
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kibana.observability.test`)
      services:
        - name: elastic-stack-eck-kibana-kb-http
          port: 5601
          scheme: https
          serversTransport: eck-kibana-https
  tls:
    secretName: elastic-public-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fleet-server
  namespace: elastic-stack
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`fleet.observability.test`)
      services:
        - name: fleet-server-agent-http
          port: 8220
          scheme: https
          serversTransport: eck-fleet-https
  tls:
    secretName: elastic-public-tls
